@startuml

title __PATTERN's Class Diagram__\n

  namespace pattern {
    class pattern.BarChartObserver {
        - courseData : Vector<CourseRecord>
        + BarChartObserver()
        + paint()
        + update()
        + update()
    }
  }
  

  namespace pattern {
    class pattern.CourseController {
        - coursePanel : JPanel
        - sliders : Vector<JSlider>
        + CourseController()
        + actionPerformed()
        + addCourse()
        {static} + main()
        + stateChanged()
        + update()
        + update()
    }
  }
  

  namespace pattern {
    class pattern.CourseData {
        - changeObservers : Vector<Observer>
        - courseData : Vector<CourseRecord>
        - newCourseObservers : Vector<Observer>
        + CourseData()
        + addCourseRecord()
        + changeCourseRecord()
        + getUpdate()
    }
  }
  

  namespace pattern {
    abstract class pattern.Observable {
        # observers : Vector<Observer>
        + Observable()
        + attach()
        + detach()
        {abstract} + getUpdate()
        + notifyObservers()
        + notifyObservers()
    }
  }
  

  namespace pattern {
    interface pattern.Observer {
        {abstract} + update()
        {abstract} + update()
    }
  }
  

  namespace pattern {
    class pattern.PieChartObserver {
        - courseData : Vector<CourseRecord>
        + PieChartObserver()
        + paint()
        + update()
        + update()
    }
  }
  

  pattern.BarChartObserver .up.|> pattern.Observer
  pattern.BarChartObserver -up-|> javax.swing.JPanel
  pattern.CourseController .up.|> java.awt.event.ActionListener
  pattern.CourseController .up.|> javax.swing.event.ChangeListener
  pattern.CourseController .up.|> pattern.Observer
  pattern.CourseController -up-|> javax.swing.JPanel
  pattern.CourseController o-- pattern.CourseData : courseData
  pattern.CourseData -up-|> pattern.Observable
  pattern.PieChartObserver .up.|> pattern.Observer
  pattern.PieChartObserver -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
